org.mmisw.ont - Ontology and Term URI resolver 
Carlos Rueda - MMI / MBARI
$Id$

ChangeLog

2009-09-13
	- UriResolver2: resolving HTML by redirecting to OntMd service
	
	- MiscDispatcher.resolveGetCsv: resolve unversioned request
	
2009-09-12
	Refactoring:
	- new OntServlet as main entry point and as a preparation to start refactoring of UriResolver
	- new UriResolver2 as a support for the incremental refactoring
	- UriResolver2: preliminary dispatch;
	- OntServlet: calls uriResolver2 (and not uriResolver) if special developer parameter "ur2" is included in the request.
	
2009-09-11
	- Added config property: aquaportal.voc2rdf.dir
	- Added internal operation _csv to provide the CSV contents of an ontology
	- TODO remove the "_lpath" operation in "Ont"
	
	
2009-05-08
	- if the "uri" parameter is included, resolve by the given URI, which is done 
	  via a SPARQL query that depends on the "form" parameter. If form is "html" 
	  or "csv" a SELECT query, otherwise, for "owl", "rdf", "n3", a CONSTRUCT query.
	  The sparql dispatcher has been updated to handle these possible formats.
	  
	- dispatch form=json for SELECT SPARQL query.
	
2009-05-07
	- MmiUri(String): prevent NPE when there is no path in the URI
	
2009-04-29:
	- Some refactorings/clean-up:
		- new RegularFileDispatcher
		- moved some misc operations into a new MiscDispatcher
		- preliminary code for dispatching an image request
		
2009-04-07:
	- Fix of issue #123: "encoded URI not properly handled" (MmiUri, MmiUriTest)

2009-04-01
	- HtmlDispacher.appendHtmlIfResolvableByThisService is now the way to properly
	  prepare refered resources that are resolvable by the service (so they are links 
	  to the HTML format as well).
	  
	- code clean-up: moved some special dispatchs from _resolveUri.
	
	
2009-03-27
	- UriResolver: some doc updates and minor code re-arrangements (no changes in logic)
	
	- JenaUtil2: some pending renamings done:
		getURIForBase --> removeTrailingFragment